--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,13 @@
 #  file:
 #    path: /Users/hyder/Work_Beach/Java/takeaway/log
 #
+spring:
+  datasource:
+    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
+    username: root
+    password: nq]777rp),x%EpY>P9J9
+    url: jdbc:p6spy:mysql://192.168.50.218:13306/takeaway?characterEncoding=utf-8&useSSL=false
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.hyderyang.takeaway.entity.po
