--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,53 @@
 #
 spring:
   datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.p6spy.engine.spy.P6SpyDriver
     username: root
     password: nq]777rp),x%EpY>P9J9
-    url: jdbc:p6spy:mysql://192.168.50.218:13306/takeaway?characterEncoding=utf-8&useSSL=false
+    url: jdbc:p6spy:mysql://192.168.50.218:13306/takeaway?characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
+    druid:
+      initial-size: 2
+      max-active: 100
+      min-idle: 10
+      max-wait: 60000
+      pool-prepared-statements: true
+      max-pool-prepared-statement-per-connection-size: 20
+      time-between-eviction-runs-millis: 60000
+      min-evictable-idle-time-millis: 300000
+      validation-query: SELECT 1 FROM DUAL
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      stat-view-servlet:
+        enabled: true
+        url-pattern: /druid/*
+        #login-username: admin
+        #login-password: admin
+      filter:
+        stat:
+          log-slow-sql: true
+          slow-sql-millis: 1000
+          merge-sql: true
+        wall:
+          config:
+            multi-statement-allow: true
+      db-type: mysql
 
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.hyderyang.takeaway.entity.po
+mybatis-plus:
+  global-config:
+    # mybatis Banner
+    banner: false
+    db-config:
+      # 逻辑删除
+      logic-delete-value: 0 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 1 # 逻辑未删除值(默认为 0)
+      #机器 ID 部分(影响雪花ID)
+      workerId: 1
+      #数据标识 ID 部分(影响雪花ID)(workerId 和 datacenterId 一起配置才能重新初始化 Sequence)
+      datacenterId: 2
+      id-type: id_worker
+
+
+  mapper-locations:
+    - classpath:mapper/*.xml
