--- a/src/main/resources/spy.properties
+++ b/src/main/resources/spy.properties
@@ -1,6 +1,6 @@
 module.log=com.p6spy.engine.logging.P6LogFactory,com.p6spy.engine.outage.P6OutageFactory
 # 使用日志系统记录sql
-appender=com.p6spy.engine.spy.appender.StdoutLogger
+appender=com.baomidou.mybatisplus.extension.p6spy.StdoutLogger
 # 自定义日志打印
 logMessageFormat=com.p6spy.engine.spy.appender.CustomLineFormat
 # 自定义日志格式
